fix: align site visit row actions

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -312,6 +312,10 @@ input[type="time"].form-control.is-invalid {
   font-size: 1.125rem;
 }
 
+.row-actions .row-unassign-button {
+  min-height: 2.25rem;
+}
+
 .view-toolbar {
   display: inline-flex;
   align-items: center;
